<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <com.visualpro.realproject.ui.views_custom.FrameLayout_Custom
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#00FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/lightblue"
                android:paddingTop="13dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/language"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:text="Done"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/divider9"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/listDivider" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layout1"
                android:background="@color/backgroundcolor">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/white_cardview"
                    android:ems="10"
                    android:hint="Search"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@+id/text"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/aic_search"
                        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/edttt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="Search"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextTextPersonName"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/all_language"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/cardView"
                    android:layout_below="@id/text"

                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_select_languages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp" />


                    <TextView
                        android:id="@+id/nolanguage_found"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/no_language_found"
                        android:textSize="16sp"
                        android:visibility="gone" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/textView8"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/textView8">

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_toLeftOf="@id/switch_detect"
                            android:text="Detect language"
                            android:textColor="@color/textColor"
                            android:textSize="14sp" />

                        <com.suke.widget.SwitchButton
                            android:id="@+id/switch_detect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="15dp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="When this feature enable, Translate will auto match correct language with text were inputted"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />


            </RelativeLayout>

        </RelativeLayout>
    </com.visualpro.realproject.ui.views_custom.FrameLayout_Custom>
</layout>
